--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,9 @@ project(chasky)
 cmake_minimum_required(VERSION 3.4.0)
 include_directories(./)
 include_directories(thirdparty/local/include)
+include_directories(build/protos)
 
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -lprotobuf -Wall")
 
 # common source files
 set (SOURCE_FILES
@@ -11,7 +12,11 @@ set (SOURCE_FILES
   ${CMAKE_SOURCE_DIR}/chasky/common/stat.cc
   ${CMAKE_SOURCE_DIR}/chasky/core/common/eigen_vector.cc
   ${CMAKE_SOURCE_DIR}/chasky/core/common/status.cc
+  ${CMAKE_SOURCE_DIR}/chasky/common/string_piece.cc
   ${CMAKE_SOURCE_DIR}/chasky/core/framework/argument.cc
+  ${CMAKE_SOURCE_DIR}/chasky/core/framework/operator_def_builder.cc
+  ${CMAKE_SOURCE_DIR}/chasky/core/framework/exec_context.cc
+  ${CMAKE_SOURCE_DIR}/chasky/core/framework/attr_value_util.cc
   )
 
 set (TEST_SOURCE_FILES
@@ -20,18 +25,31 @@ set (TEST_SOURCE_FILES
   ${CMAKE_SOURCE_DIR}/chasky/test/test.cc
   ${CMAKE_SOURCE_DIR}/chasky/core/common/eigen_vector_test.cc
   ${CMAKE_SOURCE_DIR}/chasky/core/common/status_test.cc
+  ${CMAKE_SOURCE_DIR}/chasky/common/string_piece_test.cc
+  ${CMAKE_SOURCE_DIR}/chasky/core/framework/attr_value_util_test.cc
+  ${CMAKE_SOURCE_DIR}/chasky/core/framework/operator_def_builder_test.cc
   )
+
+set (PROTOS_FILES
+  ${CMAKE_SOURCE_DIR}/build/protos/chasky/core/framework/argument.pb.cc
+  ${CMAKE_SOURCE_DIR}/build/protos/chasky/core/framework/operator.pb.cc
+  ${CMAKE_SOURCE_DIR}/build/protos/chasky/core/framework/attr_value.pb.cc
+  ${CMAKE_SOURCE_DIR}/build/protos/chasky/core/framework/types.pb.cc
+)
 
 set (LOCAL_LIB ${CMAKE_SOURCE_DIR}/thirdparty/local/lib)
 
 # test case
 add_executable (chaskytest
   ${SOURCE_FILES}
-  ${TEST_SOURCE_FILES})
+  ${PROTOS_FILES}
+  ${TEST_SOURCE_FILES}
+  )
 
 target_link_libraries (chaskytest
   "${LOCAL_LIB}/libgtest.a"
   "${LOCAL_LIB}/libgtest_main.a"
   "${LOCAL_LIB}/libglog.a"
+  "${LOCAL_LIB}/libprotobuf.a"
   )
 
